--- a/revalida-shopping-app/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/dashboard/dashboard.component.scss
@@ -68,3 +68,16 @@
     -webkit-appearance: none;
     margin: 0;
 }
+
+.bundle-form .bundle-qty-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
+}
+
+.bundle-form .bundle-qty-wrapper input {
+    width: 40px;
+    text-align: center;
+}
