--- a/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.scss
@@ -187,7 +187,7 @@ form{
 select{
     border: 1px solid rgba(0, 0, 0, 0.137);
     padding: 1.5vh 1vw;
-    margin-bottom: 4vh;
+    // margin-bottom: 4vh;
     outline: none;
     width: 100%;
     background-color: rgb(247, 247, 247);
@@ -298,4 +298,13 @@ a:hover{
 .qty-wrapper input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+.is-invalid {
+    border-color: #dc3545;
+  }
+  
+.invalid-feedback {
+    color: #dc3545;
+    font-size: 0.875rem;
 }
