--- a/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
@@ -3,7 +3,7 @@
     <!-- <app-navbar></app-navbar> -->
   
     <!-- Main Cart Section -->
-    <div class="container pb-5 pt-3">
+    <div class="container py-5">
       <!-- Heading -->
       <div class="row mb-4">
         <div class="col">
@@ -34,7 +34,7 @@
                 <div class="title">
                     <div class=" row">
                         <div class="col"><h4><b>Grocery Cart Items</b></h4></div>
-                        <div class="col-sm-2 align-self-center text-right text-muted">{{groceryCart.item_name.length}} items</div>
+                        <div class="col-sm-2 align-self-center text-right text-muted">{{filteredItems.item_name.length}} items</div>
                     </div>
                 </div>   
                 <div class="cart-items">
@@ -84,7 +84,7 @@
                 <div><h5><b>Summary</b></h5></div>
                 <hr>
                 <div class="row">
-                    <div class="col" style="padding-left:0;">{{groceryCart.item_name.length}} ITEMS</div>
+                    <div class="col" style="padding-left:0;">{{filteredItems.item_name.length}} ITEMS</div>
                     <div class="col text-right">{{ getTotal() | currency: 'PHP': 'symbol': '1.2'}}</div>
                 </div>
                 <!-- <form> -->
